# RustAPI-Experiments

./: README.md  pyproject.toml
fastapi_project/: database.py
fastapi_project/routers/: auth.py
rust-crud/: Dockerfile  docker-compose.yml
rust-crud/src/: main.rs
tests/: conftest.py  test_db.py
